name: hs-md
version: 0
synopsis: minimal Markdown generator
description: minimal Markdown generator
-- license: BSD2
-- license-file: LICENSE
author: Arianna Masciolini
maintainer: imparalhaskell@gmail.com
category: Markup
build-type: Simple
-- extra-source-files: README.md
-- copied from concept-alignment, probably arbitrary
cabal-version: >= 1.10 

library
    hs-source-dirs: .
    exposed-modules: Markdown
    build-depends:
        base,
        extra
    default-language: Haskell2010